--- a/Jane2zWaDa3wa/AndroidManifest.xml
+++ b/Jane2zWaDa3wa/AndroidManifest.xml
@@ -27,6 +27,12 @@
             </intent-filter>
         </activity>
         <activity
+            android:name="com.jane2zwada3wa.IndexActivity"
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|keyboardHidden|keyboard|screenSize">
+        </activity>
+        
+        <activity
             android:name="com.jane2zwada3wa.MainActivity"
             android:screenOrientation="portrait"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize">
