--- a/Jane2zWaDa3wa/AndroidManifest.xml
+++ b/Jane2zWaDa3wa/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.jane2zwada3wa"
+    package="com.janaezwadaawa"
     android:versionCode="1"
     android:versionName="1.0">
 
@@ -18,7 +18,7 @@
         android:theme="@style/MyTheme">
 
         <activity
-            android:name="com.jane2zwada3wa.SplashHome"
+            android:name="com.janaezwadaawa.SplashHome"
             android:screenOrientation="portrait"
             android:label="@string/app_name">
             <intent-filter>
@@ -27,13 +27,13 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.jane2zwada3wa.IndexActivity"
+            android:name="com.janaezwadaawa.IndexActivity"
             android:screenOrientation="portrait"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize">
         </activity>
         
         <activity
-            android:name="com.jane2zwada3wa.MainActivity"
+            android:name="com.janaezwadaawa.MainActivity"
             android:screenOrientation="portrait"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize">
         </activity>
