--- a/Jane2zWaDa3wa/AndroidManifest.xml
+++ b/Jane2zWaDa3wa/AndroidManifest.xml
@@ -14,7 +14,7 @@
 
     <application
         android:label="@string/app_name"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/icon_app"
         android:theme="@style/MyTheme">
 
         <activity
