--- a/Jane2zWaDa3wa/AndroidManifest.xml
+++ b/Jane2zWaDa3wa/AndroidManifest.xml
@@ -11,7 +11,8 @@
 	<uses-permission android:name="android.permission.WAKE_LOCK"/>
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 	<uses-permission android:name="android.permission.DOWNLOAD_WITHOUT_NOTIFICATION" />
-
+	<uses-permission android:name="android.permission.CALL_PHONE"/>
+	
     <application
         android:label="@string/app_name"
         android:icon="@drawable/icon_app"
