--- a/Jane2zWaDa3wa/AndroidManifest.xml
+++ b/Jane2zWaDa3wa/AndroidManifest.xml
@@ -19,7 +19,7 @@
 	
     <application
         android:label="@string/app_name"
-        android:icon="@drawable/icon_app"
+        android:icon="@drawable/janaez_logo"
         android:theme="@style/MyTheme">
 
         <activity
