--- a/Jane2zWaDa3wa/AndroidManifest.xml
+++ b/Jane2zWaDa3wa/AndroidManifest.xml
@@ -17,6 +17,8 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+    <uses-permission android:name="com.sec.android.provider.badge.permission.WRITE"/>
+ 	<uses-permission android:name="com.sec.android.provider.badge.permission.READ"/>
 	
 <!--     <uses-permission android:name="com.janaezwadaawa.permission.C2D_MESSAGE" /> -->
 	
